--- a/index2.html
+++ b/index2.html
@@ -3,87 +3,143 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>calculator</title>
+	<title>Calculator</title>
 	<link rel="stylesheet" type="text/css" href="style2.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.9.0/math.js"></script> 
+	<script>
+		
+		function updateInput(value) {
+			const input = document.querySelector('input');
+			input.value += value;
+		}
+
+		
+		function clearInput() {
+			const input = document.querySelector('input');
+			input.value = '';
+		}
+
+		
+		function evaluateExpression() {
+			const input = document.querySelector('input');
+			try {
+				input.value = math.evaluate(input.value);  
+			} catch (error) {
+				input.value = 'Error';  
+			}
+		}
+
+	
+		function toggleSign() {
+			const input = document.querySelector('input');
+			if (input.value) {
+				input.value = (parseFloat(input.value) * -1).toString();
+			}
+		}
+
+	
+		function memoryClear() {
+			localStorage.setItem('memory', '');  
+		}
+
+		
+		function memoryRecall() {
+			const input = document.querySelector('input');
+			const memory = localStorage.getItem('memory');
+			input.value = memory;
+		}
+
+		
+		function memoryAdd() {
+			const input = document.querySelector('input');
+			localStorage.setItem('memory', input.value);
+		}
+
+		function memorySubtract() {
+			const input = document.querySelector('input');
+			const currentValue = parseFloat(input.value);
+			const memoryValue = parseFloat(localStorage.getItem('memory') || '0');
+			localStorage.setItem('memory', memoryValue - currentValue);
+		}
+	</script>
 </head>
 <body>
 	<center>
-		<h1 class="">calculator</h1>
-	<div class="cal"><input type="text" name="" value="">
-        <div>
-            <button class="b1">(</button>
-            <button class="b2">)</button>
-            <button class="mc">mc</button>
-            <button class="m1">m+</button>
-            <button class="m2">m-</button>
-            <button class="mr">mr</button>
-        </div>
-        <div>
-            <button class="x1"><a href="index3.html" style="color: white; text-decoration: none;">2<sup>nd</sup> </a> </button>
-            <button class="x2">x<sup>2</sup> </button>
-            <button class="x3">x<sup>3</sup> </button>
-            <button class="x4">x<sup>y</sup> </button>
-            <button class="e">e<sup>x</sup> </button>
-            <button class="x5">10<sup>x</sup> </button>
-        </div>
-        <div>
-            <button class="x6">1/x</button>
-            <button class="r1"><i>&#8730;</i></button>
-            <button class="r2">hk</button>
-            <button class="r3">hk</button>
-            <button class="r4">ln</button>
-            <button class="log">log<sub>10</sub> </button>
-        </div>
-        <div>
-            <button class="t0">x!</button>
-            <button class="t1">sin</button>
-            <button class="t2">cos</button>
-            <button class="t3">tan</button>
-            <button class="t4">e</button>
-            <button class="t5">EE</button>
-        </div>
-        <div>
-            <button class="t6">Rand</button>
-            <button class="t7">sinh</button>
-            <button class="t8">cosh</button>
-            <button class="t9">tanh</button>
-            <button class="t10" > <i class="fa-solid fa-square-root"  style="height: 2px; width: 2px;">&Pi;</i></button>
-            <button class="t11">Deg</button>
-        </div>
-		<div>
-			<button class="btn4">AC</button>
-			<button class="btn4">+/-</button>
-			<button class="btn4">%</button>
-			<button class="btn2">/</button>
+		<h1>Calculator</h1>
+		<div class="cal">
+			<input type="text" name="" value="" readonly>
+			<div>
+				<button class="b1" onclick="updateInput('(')"> ( </button>
+				<button class="b2" onclick="updateInput(')')"> ) </button>
+				<button class="mc" onclick="memoryClear()">mc</button>
+				<button class="m1" onclick="memoryAdd()">m+</button>
+				<button class="m2" onclick="memorySubtract()">m-</button>
+				<button class="mr" onclick="memoryRecall()">mr</button>
+			</div>
+			<div>
+				<button class="x1" onclick="updateInput('2^')"> <a href="index3.html"> 2<sup>nd</sup> </a></button>
+				<button class="x2" onclick="updateInput('^2')">x<sup>2</sup> </button>
+				<button class="x3" onclick="updateInput('^3')">x<sup>3</sup> </button>
+				<button class="x4" onclick="updateInput('^')">x<sup>y</sup> </button>
+				<button class="e" onclick="updateInput('e^')">e<sup>x</sup> </button>
+				<button class="x5" onclick="updateInput('10^')">10<sup>x</sup> </button>
+			</div>
+			<div>
+				<button class="x6" onclick="updateInput('1/x')">1/x</button>
+				<button class="r1" onclick="updateInput('sqrt(')">&#8730;</button>
+				<button class="r2" onclick="updateInput('log(')">ln</button>
+				<button class="r3" onclick="updateInput('log10(')">log</button>
+				<button class="r4" onclick="updateInput('log(')">ln</button>
+				<button class="log" onclick="updateInput('log10(')">log<sub>10</sub></button>
+			</div>
+			<div>
+				<button class="t0" onclick="updateInput('!')">x!</button>
+				<button class="t1" onclick="updateInput('sin(')">sin</button>
+				<button class="t2" onclick="updateInput('cos(')">cos</button>
+				<button class="t3" onclick="updateInput('tan(')">tan</button>
+				<button class="t4" onclick="updateInput('e')">e</button>
+				<button class="t5" onclick="updateInput('EE')">EE</button>
+			</div>
+			<div>
+				<button class="t6" onclick="updateInput('Rand')">Rand</button>
+				<button class="t7" onclick="updateInput('sinh(')">sinh</button>
+				<button class="t8" onclick="updateInput('cosh(')">cosh</button>
+				<button class="t9" onclick="updateInput('tanh(')">tanh</button>
+				<button class="t10" onclick="updateInput('π')"><i class="fa-solid fa-square-root"  style="height: 2px; width: 2px;">&Pi;</i></button>
+				<button class="t11" onclick="updateInput('Deg')">Deg</button>
+			</div>
+			<div>
+				<button class="btn4" onclick="clearInput()">AC</button>
+				<button class="btn4" onclick="toggleSign()">+/-</button>
+				<button class="btn4" onclick="updateInput('%')">%</button>
+				<button class="btn2" onclick="updateInput('/')">/</button>
+			</div>
+			<div>
+				<button class="btn3" onclick="updateInput('7')">7</button>
+				<button class="btn3" onclick="updateInput('8')">8</button>
+				<button class="btn3" onclick="updateInput('9')">9</button>
+				<button class="btn2" onclick="updateInput('*')">*</button>
+			</div>
+			<div>
+				<button class="btn3" onclick="updateInput('4')">4</button>
+				<button class="btn3" onclick="updateInput('5')">5</button>
+				<button class="btn3" onclick="updateInput('6')">6</button>
+				<button class="btn2" onclick="updateInput('-')">-</button>
+			</div>
+			<div>
+				<button class="btn3" onclick="updateInput('1')">1</button>
+				<button class="btn3" onclick="updateInput('2')">2</button>
+				<button class="btn3" onclick="updateInput('3')">3</button>
+				<button class="btn2" onclick="updateInput('+')">+</button>
+			</div>
+			<div>
+				<button class="btn5"><a href="index1.html" style="color: white; text-decoration: none;" ><i class="fa fa-calculator" aria-hidden="true"></i></a></button>
+				<button class="btn3" onclick="updateInput('0')">0</button>
+				<button class="btn3" onclick="updateInput('.')">.</button>
+				<button class="btn2" onclick="evaluateExpression()">=</button>
+			</div>
 		</div>
-		<div>
-			<button class="btn3">7</button>
-			<button class="btn3">8</button>
-			<button class="btn3">9</button>
-			<button class="btn2">*</button>
-		</div>
-		<div>
-			<button class="btn3">4</button>
-			<button class="btn3">5</button>
-			<button class="btn3">6</button>
-			<button class="btn2">-</button>
-		</div>
-		<div>
-			<button class="btn3">1</button>
-			<button class="btn3">2</button>
-			<button class="btn3">3</button>
-			<button class="btn2">+</button>
-		</div>
-		<div>
-			<button class="btn5"><a href="index1.html" style="color: white; text-decoration: none;" ><i class="fa fa-calculator" aria-hidden="true"></i></a></button>
-			<button class="btn3">0</button>
-			<button class="btn3">.</button>
-			<button class="btn2">=</button>
-		</div>
-		
-
-	</div>
-</center>
+	</center>
 </body>
 </html>
