--- a/index2.html
+++ b/index2.html
@@ -78,7 +78,7 @@
 				<button class="mr" onclick="memoryRecall()">mr</button>
 			</div>
 			<div>
-				<button class="x1" onclick="updateInput('2^')"> <a href="index3.html"> 2<sup>nd</sup> </a></button>
+				<button class="x1" onclick="updateInput('2^')"> <a href="index3.html" style="color: white; text-decoration: none;"> 2<sup>nd</sup> </a></button>
 				<button class="x2" onclick="updateInput('^2')">x<sup>2</sup> </button>
 				<button class="x3" onclick="updateInput('^3')">x<sup>3</sup> </button>
 				<button class="x4" onclick="updateInput('^')">x<sup>y</sup> </button>
@@ -88,8 +88,8 @@
 			<div>
 				<button class="x6" onclick="updateInput('1/x')">1/x</button>
 				<button class="r1" onclick="updateInput('sqrt(')">&#8730;</button>
-				<button class="r2" onclick="updateInput('log(')">ln</button>
-				<button class="r3" onclick="updateInput('log10(')">log</button>
+				<button class="r2" onclick="updateInput('cubert(')">&#8731;</button> 
+				<button class="r3"  class="r2" onclick="updateInput('yroot(')">y√x</button>
 				<button class="r4" onclick="updateInput('log(')">ln</button>
 				<button class="log" onclick="updateInput('log10(')">log<sub>10</sub></button>
 			</div>
