--- a/index2.html
+++ b/index2.html
@@ -68,7 +68,7 @@
 	}
 	function insertPi() {
     const input = document.querySelector('input');
-    input.value += '3.14159'; // Directly insert Pi value
+    input.value += '3.14159';
 }
 
 	</script>
