--- a/index2.html
+++ b/index2.html
@@ -87,7 +87,7 @@
 				<button class="mr" onclick="memoryRecall()">mr</button>
 			</div>
 			<div>
-				<button class="x1" onclick="updateInput('2^')"> <a href="index3.html" style="color: white; text-decoration: none;"> 2<sup>nd</sup> </a></button>
+				<button class="x1" onclick="updateInput('')"> <a href="index3.html" style="color: white; text-decoration: none;"> 2<sup>nd</sup> </a></button>
 				<button class="x2" onclick="updateInput('^2')">x<sup>2</sup> </button>
 				<button class="x3" onclick="updateInput('^3')">x<sup>3</sup> </button>
 				<button class="x4" onclick="updateInput('^')">x<sup>y</sup> </button>
